[feat] 自动跳过打包测试